--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -61,7 +61,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />
 
         <TextView
-            android:id="@+id/tv_release_date_detail"
+            android:id="@+id/tvReleaseDateDetail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -87,7 +87,7 @@
             app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
         <TextView
-            android:id="@+id/tv_overview_detail"
+            android:id="@+id/tvOverviewDetail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
