--- a/core/src/main/res/layout/item_movie.xml
+++ b/core/src/main/res/layout/item_movie.xml
@@ -5,40 +5,47 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/cardView"
-        android:layout_width="140dp"
-        android:layout_height="220dp"
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmerCover"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        app:cardCornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/ivCoverMovie"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="120dp"
+            android:layout_height="200dp"
             android:contentDescription="@string/cover_movie"
             android:scaleType="centerCrop"
             tools:srcCompat="@tools:sample/backgrounds/scenic" />
-    </com.google.android.material.card.MaterialCardView>
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
-    <TextView
-        android:id="@+id/tvTitleMovie"
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmerTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:ellipsize="end"
-        android:maxLines="2"
-        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/cardView"
-        app:layout_constraintTop_toTopOf="@+id/cardView"
-        tools:text="Avatar the Legend of Aang" />
+        app:layout_constraintStart_toEndOf="@+id/shimmerCover"
+        app:layout_constraintTop_toTopOf="@+id/shimmerCover">
+
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_text_rounded"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:textSize="20sp"
+            tools:text="Avatar the Legend of Aang" />
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
     <TextView
         android:id="@+id/tvReleaseDate"
@@ -46,10 +53,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:text="@string/release_date"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/tvTitleMovie"
-        app:layout_constraintTop_toBottomOf="@+id/tvTitleMovie" />
+        app:layout_constraintStart_toStartOf="@id/shimmerTitle"
+        app:layout_constraintTop_toBottomOf="@+id/shimmerTitle"
+        tools:text="@string/release_date" />
 
     <RatingBar
         android:id="@+id/ratingBar"
